# x64dbg_MCP

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: smoke_test.py
x64dbg-mcp-rust/: Cargo.toml  README.md  build.rs  fix_lints.py  wrapper.h
x64dbg-mcp-rust/src/: lib.rs
x64dbg-mcp-rust/src/mcp/: concurrency.rs  events.rs  logger.rs  mod.rs  server.rs  tools.rs  types.rs
x64dbg-mcp-rust/src/x64dbg/: api.rs  mod.rs
x64dbg-mcp-rust/tests/: test_mcp.rs
