[package]
name = "x64dbg-mcp-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "transport-streamable-http-server", "elicitation", "schemars"] }
crossbeam-channel = "0.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.2.1"

[build-dependencies]
bindgen = "0.69.4"
